@@ -2,6 +2,7 @@ This file documents the revision history for mod_gearman.
 
 1.0.10 Thu Aug 25 16:07:55 CEST 2011
           - new option 'show_error_output' for worker
+          - fixed failed job when host+service > 64 chars
           - fixed tests
 
 1.0.9  Mon Aug 15 16:05:23 CEST 2011
